--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:minHeight="48dp"
         android:text="12345"
         android:textColor="#140037"
+        android:textColorHighlight="#753FD3"
         android:textColorHint="#140037"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.136"
@@ -32,7 +33,9 @@
         android:minHeight="48dp"
         android:text="3039"
         android:textColor="#140037"
+        android:textColorHighlight="#753FD3"
         android:textColorHint="#140037"
+        android:textColorLink="#753FD3"
         app:layout_constraintBottom_toBottomOf="@+id/Num"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.867"
@@ -50,7 +53,9 @@
         android:minHeight="48dp"
         android:text="10"
         android:textColor="#140037"
+        android:textColorHighlight="#753FD3"
         android:textColorHint="#140037"
+        android:textColorLink="#753FD3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.136"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +70,7 @@
         android:minHeight="48dp"
         android:text="16"
         android:textColor="#140037"
+        android:textColorHighlight="#753FD3"
         android:textColorHint="#140037"
         app:layout_constraintBottom_toBottomOf="@+id/SSYouNum"
         app:layout_constraintEnd_toEndOf="parent"
